<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="20dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/primary_outline"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textSize="16sp"
                        android:paddingEnd="10dp"
                        />
                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textSize="16sp"
                        android:textStyle="bold"
                       />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email"
                        android:textSize="16sp"
                        android:maxLines="2"
                        android:paddingEnd="10dp"
             />
                    <TextView
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email"
                        android:textSize="16sp"
                        android:maxLines="2"
                        android:textStyle="bold"
  />



                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/my_primary"
            android:layout_margin="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_bg"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:drawableRight="@drawable/round_arrow_forward_ios_24"


            android:text="@string/language"
            android:layout_margin="5dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_bg"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:drawableRight="@drawable/round_arrow_forward_ios_24"
            android:text="@string/about"
            android:layout_margin="5dp"       />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_bg"
            android:textAllCaps="false"
            android:textSize="18sp"

            android:textAlignment="viewStart"
            android:drawableRight="@drawable/round_arrow_forward_ios_24"
            android:text="@string/log_out"
            android:layout_margin="5dp"/>




</LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        android:background="@color/my_primary"

        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>